--- a/index.html
+++ b/index.html
@@ -57,18 +57,13 @@
 
   <main id="main-content">
     <section class="p-strip--hero is-bordered is-deep">
-      <div class="row u-equal-height">
-        <div class="col-6">
-          <h1>The fast, open and secure display server for any device</h1>
-          <p>Mir is a system-level component that can be used to unlock next-generation user experiences for devices ranging
-            from traditional Linux desktops to IoT devices to embedded products powered by Linux. Mir can be viewed as a
-            replacement for the X window server system, commonly used on Linux desktop devices. Mir allows device makers
-            and desktop users to have a well-defined, efficient, flexible, and secure platform on which their graphical environment
-            sits.</p>
-        </div>
-        <div class="col-6 u-align--center u-vertically-center">
-          <img src="https://assets.ubuntu.com/v1/c65d855b-device.png" alt="" />
-        </div>
+      <div class="row p-strip--hero__row">
+        <h1 style="max-width: 14em">The fast, open and secure display server for any device</h1>
+        <p>Mir is a system-level component that can be used to unlock next-generation user experiences for devices ranging
+          from traditional Linux desktops to IoT devices to embedded products powered by Linux. Mir can be viewed as a
+          replacement for the X window server system, commonly used on Linux desktop devices. Mir allows device makers
+          and desktop users to have a well-defined, efficient, flexible, and secure platform on which their graphical environment
+          sits.</p>
       </div>
     </section>
     <section class="p-strip is-bordered">
