--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
         <div class="col-7">
           <h1>The fast, open and secure display server for any device</h1>
           <p class="p-heading--three">Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fast path to deployment.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="p-strip--light is-bordered">
+      <div class="row">
+        <div class="col-8">
+          <h2>What is Mir?</h2>
           <p>Mir is a system-level component that can be used to unlock next-generation user experiences for devices ranging
-            from traditional Linux desktops to IoT devices to embedded products powered by Linux. Mir can be viewed as a
-            replacement for the X window server system, commonly used on Linux desktop devices. Mir allows device makers
-            and desktop users to have a well-defined, efficient, flexible, and secure platform on which their graphical environment
-            sits.</p>
+              from traditional Linux desktops to IoT devices to embedded products powered by Linux. Mir can be viewed as a
+              replacement for the X window server system, commonly used on Linux desktop devices. Mir allows device makers
+              and desktop users to have a well-defined, efficient, flexible, and secure platform on which their graphical environment
+              sits.</p>
         </div>
       </div>
     </section>
