Content updates to the homepage

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row p-strip--hero__row">
         <div class="col-7">
           <h1>The fast, open and secure display server for any device</h1>
-          <p class="p-heading--three">Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fast path to deployment.</p>
+          <p>Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fast path to deployment.</p>
         </div>
       </div>
     </section>
@@ -100,13 +100,13 @@
           <p class="p-card--featured__date">17 May 2018</p>
           <p>This is a guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.</p>
         </article>
-        <article class="p-card--featured col-4">
-          <h4 class="p-muted-heading">TUTORIAL</h4>
+        <article class="p-card--article col-4">
+          <h4 class="p-muted-heading">ARTICLE</h4>
           <hr />
           <h3 class="p-heading--four">
             <a href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/">Snaps to develop a Web kiosk on Ubuntu Core (using Wayland)&nbsp;&rsaquo;</a>
           </h3>
-          <p class="p-card--featured__date">8 June 2018</p>
+          <p class="p-card--article__date">8 June 2018</p>
           <p>Display servers solve a large and complex problem. Mir provides a broad and powerful library to solve those problems, but there is a learning curve to use Mir effectively.</p>
         </article>
       </div>
@@ -164,11 +164,11 @@
         </div>
         <div class="p-card col-6">
           <h4>Mir Desktop Environment</h4>
-          <p><a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129">A simple desktop shell that uses Mir&nbsp;&rsaquo;</a></p>
+          <p><a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129">Egmde is a simple desktop shell that uses Mir&nbsp;&rsaquo;</a></p>
         </div>
       </div>
     </section>
-    <section class="p-strip">
+    <section class="p-strip--light">
       <div class="row">
         <h2>Get started</h2>
       </div>
