More content updates

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="row p-strip--hero__row">
         <div class="col-7">
           <h1>The fast, open and secure display server for any device</h1>
-          <p>Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fast path to deployment.</p>
+          <p>Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fastest path to deployment.</p>
         </div>
       </div>
     </section>
@@ -69,11 +69,7 @@
       <div class="row">
         <div class="col-8">
           <h2>What is Mir?</h2>
-          <p>Mir is a system-level component that can be used to unlock next-generation user experiences for devices ranging
-              from traditional Linux desktops to IoT devices to embedded products powered by Linux. Mir can be viewed as a
-              replacement for the X window server system, commonly used on Linux desktop devices. Mir allows device makers
-              and desktop users to have a well-defined, efficient, flexible, and secure platform on which their graphical environment
-              sits.</p>
+          <p>Mir is a system-level component that can be used to unlock next-generation user experiences. It runs on a range of Linux powered devices including traditional desktops, IoT and embedded products. Mir is a replacement for the X window server system, commonly used on Linux desktop devices. It allows device makers and desktop users to have a well-defined, efficient, flexible, and secure platform for their graphical environment.</p>
         </div>
       </div>
     </section>
@@ -131,7 +127,7 @@
     <section class="p-strip--light u-no-padding--top is-bordered">
       <div class="row">
         <div class="col-8 u-sv3">
-          <h2>The system architecture</h2>
+          <h2>System architecture</h2>
           <p>Mir uses Wayland as the primary protocol for connecting to applications. Not all graphical toolkits have native support for Wayland yet. So, depending on the toolkit an application uses, Xwayland may be required. Mir supports a range of “platform” plugins that allow it to work seamlessly across different hardware and graphics drivers.</p>
         </div>
       </div>
@@ -170,7 +166,7 @@
     </section>
     <section class="p-strip--light">
       <div class="row">
-        <h2>Get started</h2>
+        <h2>Get involved</h2>
       </div>
       <div class="row p-divider">
         <div class="col-6 p-divider__block">
