--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h4 class="p-muted-heading">TUTORIAL</h4>
           <hr />
           <h3 class="p-heading--four">
-            <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0">How to build a digital signage app for embedded displays&nbsp;&rsaquo;</a>
+            <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps#0" target="_blank">How to build a digital signage app for embedded displays&nbsp;&rsaquo;</a>
           </h3>
           <p class="p-card--featured__date">21 May 2018</p>
           <p>A guide to creating graphical snaps for Ubuntu IoT devices on top of an Xwayland stack. Learn how to build a digital signage app for kiosks, advertising screens and other embedded displays.</p>
@@ -91,7 +91,7 @@
           <h4 class="p-muted-heading">TUTORIAL</h4>
           <hr />
           <h3 class="p-heading--four">
-            <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0">How to create graphical snaps for IoT devices on top of a Xwayland stack&nbsp;&rsaquo;</a>
+            <a href="https://tutorials.ubuntu.com/tutorial/graphical-snaps-xwayland#0" target="_blank">How to create graphical snaps for IoT devices on top of a Xwayland stack&nbsp;&rsaquo;</a>
           </h3>
           <p class="p-card--featured__date">17 May 2018</p>
           <p>This is a guide on how to create graphical snaps for Ubuntu with a single GUI application running fullscreen on the display.</p>
@@ -100,7 +100,7 @@
           <h4 class="p-muted-heading">ARTICLE</h4>
           <hr />
           <h3 class="p-heading--four">
-            <a href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/">Snaps to develop a Web kiosk on Ubuntu Core (using Wayland)&nbsp;&rsaquo;</a>
+            <a href="https://community.ubuntu.com/t/snaps-to-develop-a-web-kiosk-on-ubuntu-core-using-wayland/" target="_blank">Snaps to develop a Web kiosk on Ubuntu Core (using Wayland)&nbsp;&rsaquo;</a>
           </h3>
           <p class="p-card--article__date">8 June 2018</p>
           <p>Display servers solve a large and complex problem. Mir provides a broad and powerful library to solve those problems, but there is a learning curve to use Mir effectively.</p>
