--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@
       <div class="row u-equal-height">
         <div class="p-card col-6">
           <h4>Mir Kiosk</h4>
-          <p><a href="https://community.ubuntu.com/t/mir-kiosk-a-project-that-uses-mir/">A graphical output or display for everything from washing machines to smart thermostats&nbsp;&rsaquo;</a></p>
+          <p><a href="https://community.ubuntu.com/t/mir-kiosk-a-project-that-uses-mir/" target="_blank">A graphical output or display for everything from washing machines to smart thermostats&nbsp;&rsaquo;</a></p>
         </div>
         <div class="p-card col-6">
           <h4>Unity8</h4>
-          <p><a href="https://community.ubuntu.com/t/unity8-a-project-that-uses-mir/">A graphical shell that targets a range of devices including phones, tablets, laptops and desktops&nbsp;&rsaquo;</a></p>
+          <p><a href="https://community.ubuntu.com/t/unity8-a-project-that-uses-mir/" target="_blank">A graphical shell that targets a range of devices including phones, tablets, laptops and desktops&nbsp;&rsaquo;</a></p>
         </div>
       </div>
       <div class="row u-equal-height">
         <div class="p-card col-6">
           <h4>Mir-kiosk snap</h4>
-          <p><a href="https://developer.ubuntu.com/core/examples/snaps-on-mir">How to build a kiosk-style device with Mir and Ubuntu Core&nbsp;&rsaquo;</a></p>
+          <p><a href="https://developer.ubuntu.com/core/examples/snaps-on-mir" target="_blank">How to build a kiosk-style device with Mir and Ubuntu Core&nbsp;&rsaquo;</a></p>
         </div>
         <div class="p-card col-6">
           <h4>Mir Desktop Environment</h4>
-          <p><a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129">Egmde is a simple desktop shell that uses Mir&nbsp;&rsaquo;</a></p>
+          <p><a href="https://community.ubuntu.com/t/egmde-a-project-that-uses-mir/7129" target="_blank">Egmde is a simple desktop shell that uses Mir&nbsp;&rsaquo;</a></p>
         </div>
       </div>
     </section>
