--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
   <title>mir-server.io</title>
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-TDTHR7H');</script>
+  <!-- End Google Tag Manager -->
+
   <script>
     /* HTML5 element support */
     for (var e, l = 'article aside footer header nav section time'.split(' '); e = l.pop(); document.createElement(e));
@@ -28,6 +36,11 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TDTHR7H"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <header id="navigation" class="p-navigation">
     <div class="row">
       <div class="p-navigation__banner">
