Added the global nav

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
       </div>
     </footer>
   </main>
+  <script src="/src/js/global-nav.js"></script>
+  <script>canonicalGlobalNav.createNav({maxWidth: '64.875rem'});</script>
 </body>
 
 </html>
