--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Mir display server - The fast, open and secure display server for any device</title>
 
   <!-- GitHub buttons -->
-  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script defer src="https://buttons.github.io/buttons.js"></script>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -46,17 +46,17 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <header id="navigation" class="p-navigation">
-    <div class="row">
+    <div class="p-navigation__row">
       <div class="p-navigation__banner">
-        <div class="p-navigation__logo">
-          <a class="p-navigation__link" href="https://mir-server.io/">
-            <img class="p-navigation__image" src="resources/mir-logo.svg" alt="" width="180" />
+        <div class="p-navigation__logo u-vertically-center">
+          <a class="p-navigation__link" href="/" style="color:white; text-transform: capitalize;">
+            Mir display server
           </a>
         </div>
         <a href="#navigation" class="p-navigation__toggle--open" title="menu">Menu</a>
         <a href="#navigation-closed" class="p-navigation__toggle--close" title="close menu">Close menu</a>
       </div>
-      <nav class="p-navigation__nav" role="menubar">
+      <nav class="p-navigation__nav">
         <span class="u-off-screen">
           <a href="#main-content">Jump to main content</a>
         </span>
@@ -73,12 +73,12 @@
   </header>
 
   <main id="main-content">
-    <section class="p-strip--hero is-bordered is-deep">
+    <section class="p-strip--hero is-deep">
       <div class="row p-strip--hero__row">
         <div class="col-7">
           <h1>The fast, open and secure display server for any device</h1>
           <p>Whether you want an information kiosk, digital signage display, in-car entertainment stack, or home automation interface, Mir on Ubuntu is your fastest path to deployment.</p>
-          <p class="u-sv3"><a href="https://assets.ubuntu.com/v1/bd787c8a-canonical-mir-datasheet-2018-12-20.pdf" class="p-button--positive"><span class="p-link--external">Get the Mir datasheet</span></a></p>
+          <p><a href="https://assets.ubuntu.com/v1/bd787c8a-canonical-mir-datasheet-2018-12-20.pdf" class="p-button--positive"><span class="p-link--external">Get the Mir datasheet</span></a></p>
           <div>
             <a class="github-button" data-size="large" href="https://github.com/MirServer/mir" aria-label="Follow @MirServer on GitHub"></a>
             <a class="github-button" data-size="large" href="https://github.com/MirServer/mir" data-icon="octicon-star" data-show-count="true" aria-label="Star MirServer/mir on GitHub"></a>
@@ -213,17 +213,22 @@
         </div>
       </div>
     </section>
-    <footer class="p-footer">
+    <footer class="p-strip">
       <div class="row">
         <div class="col-12">
-          <p class="u-no-margin--bottom"><small>&copy; 2019 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.</small></p>
+          <p>&copy; 2019 Canonical Ltd. Ubuntu and Canonical are registered trademarks of Canonical Ltd.</p>
           <nav>
-            <ul class="p-footer__links">
-              <li class="p-footer__item">
-                <a class="p-footer__link" href="https://www.ubuntu.com/legal"><small>Legal info</small></a>
+            <ul class="p-inline-list--middot">
+              <li class="p-inline-list__item">
+                <a aria-label="External link to the Ubuntu legal information page" href="http://www.ubuntu.com/legal">
+                  Legal information
+                </a>
               </li>
-              <li class="p-footer__item">
-                <a class="p-footer__link" href="https://github.com/canonical-websites/mir-server.io/issues/new"><small>Report a bug with this site</small></a>
+              <li class="p-inline-list__item">
+                <a aria-label="External link to report a bug on this site"
+                  href="https://github.com/canonical-websites/mir-server.io/issues/new">
+                  Report a bug on this site
+                </a>
               </li>
             </ul>
             <span class="u-off-screen">
@@ -234,8 +239,8 @@
       </div>
     </footer>
   </main>
-  <script src="/src/js/global-nav.js"></script>
-  <script>canonicalGlobalNav.createNav({maxWidth: '64.875rem'});</script>
+  <script src="/src/js/build/global-nav/global-nav.js"></script>
+  <script>canonicalGlobalNav.createNav({maxWidth: '72rem'});</script>
 </body>
 
 </html>
