Multistage builds and fix /docs

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="doc/getting_and_using_mir.html">User manual</a>
           </li>
           <li class="p-navigation__link" role="menuitem">
-            <a href="doc">Developer manual</a>
+            <a href="/doc/">Developer manual</a>
           </li>
         </ul>
       </nav>
