--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
   <link rel="apple-touch-icon" sizes="72x72" href="https://assets.ubuntu.com/v1/09460d9a-apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" href="https://assets.ubuntu.com/v1/cc66da65-apple-touch-icon.png">
 
-  <link rel="stylesheet" href="build/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -239,7 +239,7 @@
       </div>
     </footer>
   </main>
-  <script src="/src/js/build/global-nav/global-nav.js"></script>
+  <script src="/js/build/global-nav/global-nav.js"></script>
   <script>canonicalGlobalNav.createNav({maxWidth: '72rem'});</script>
 </body>
 
