--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
       </div>
     </footer>
   </main>
-  <script src="/js/build/global-nav/global-nav.js"></script>
+  <script src="/js/build/global-nav.js"></script>
   <script>canonicalGlobalNav.createNav({maxWidth: '72rem'});</script>
 </body>
 
