--- a/src/index.html
+++ b/src/index.html
@@ -225,6 +225,9 @@
                 </a>
               </li>
               <li class="p-inline-list__item">
+                <a class="js-revoke-cookie-manager" href="">Manage your tracker settings</a>
+              </li>
+              <li class="p-inline-list__item">
                 <a aria-label="External link to report a bug on this site"
                   href="https://github.com/canonical-websites/mir-server.io/issues/new">
                   Report a bug on this site
@@ -301,8 +304,12 @@ function sendEvent(category, origin, destination, label) {
   }
 }
 
-  </script> 
-  <script>canonicalGlobalNav.createNav({maxWidth: '72rem'});</script>
+  </script>
+  <script src="/js/build/cookie-policy.js"></script>
+  <script>
+    cpNs.cookiePolicy();
+    canonicalGlobalNav.createNav({maxWidth:"72rem"});
+  </script>
 </body>
 
 </html>
