--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,9 @@
       <div class="row">
         <div class="col-8">
           <h2>What is Mir?</h2>
+          <p class="p-heading--4">Introducing a secure display server for IoT devices</p>
           <p>Mir is a system-level component that can be used to unlock next-generation user experiences. It runs on a range of Linux powered devices including traditional desktops, IoT and embedded products. Mir is a replacement for the X window server system, commonly used on Linux desktop devices. It allows device makers and desktop users to have a well-defined, efficient, flexible, and secure platform for their graphical environment.</p>
+          <p><a href="https://ubuntu.com/blog/build-smart-display-devices-with-mir-fast-to-production-secure-open-source" class="p-button--positive"><span class="p-link--external">Download the whitepaper</span></a></p>
         </div>
       </div>
     </section>
@@ -137,7 +139,7 @@
       <div class="row p-divider">
         <div class="col-6 p-divider__block">
           <p>Historically, graphical user interfaces Linux have been powered by the X windowing system. X has a long and successful history and it has served the purposes of both system level and application level UI well for more than 3 decades. However, users nowadays expect a more consistent, integrated and secure user experience than is possible to offer on top of the X windowing system.</p>
-          <p>The X11 protocol (used by X) was not designed with security in mind and a malicious application can obtain information from other running X11 applications. For instance, X11 servers do not protect sensitive information like keystrokes between applications using them.</p>
+          <p>The X11 protocol used by X was not designed with security in mind, and a malicious application can obtain information from other running X11 applications. For instance, X11 servers do not protect sensitive information like keystrokes between applications using them.</p>
         </div>
         <div class="col-6 p-divider__block">
           <p>Mir was designed from the ground-up with security in mind. To meet the needs of today's users Mir avoids the X11 protocol and uses Wayland for a more modern and secure approach to graphics. Each application talks exclusively to the Mir server through it’s own socket that is both secure and robust against attack. Wayland is the de facto successor to X11 and is designed to address the problems that have proved intractable with the X windowing system.</p>
@@ -148,8 +150,7 @@
     <section class="p-strip--light u-no-padding--top is-bordered">
       <div class="row">
         <div class="col-8 u-sv3">
-          <h2>System architecture</h2>
-          <p>Mir uses Wayland as the primary protocol for connecting to applications. Not all graphical toolkits have native support for Wayland yet. So, depending on the toolkit an application uses, Xwayland may be required. Mir supports a range of “platform” plugins that allow it to work seamlessly across different hardware and graphics drivers.</p>
+          <h3>System architecture</h3>
         </div>
       </div>
       <div class="row">
