--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@
             </div>
             <p>Get connected.</p>
             <p><a class="p-link--external" href="https://community.ubuntu.com/c/mir">Mir in the Ubuntu Community forum</a></p>
-            <p><a class="p-link--external" href="https://webchat.freenode.net/?channels=%23mir-server">#mir-server on Freenode</a></p>
+            <p><a class="p-link--external" href="https://web.libera.chat/">#mir-server on Libera.Chat</a></p>
           </div>
         </div>
       </div>
